# LogSentry-CLI-Security-Analyzer

./: LogSentry-CLI-Demo.spec  README.md
logsentry/: .gitignore  ADD_LOGO_GUIDE.md  CLI_EXECUTABLE_FIX_SUMMARY.md  CUSTOM_LOGO_SETUP.md  EXECUTABLE_GUIDE.md  EXECUTABLE_SUMMARY.md  FRONTEND_SUMMARY.md  GITHUB_READY_CHECKLIST.md  GITHUB_UPLOAD_GUIDE.md  GITHUB_UPLOAD_SUMMARY.md  HTML_TROUBLESHOOTING_GUIDE.md  INSTALLATION.md  LICENSE  LICENSE.md  LOGO_IMPLEMENTATION_EXAMPLE.md  LogSentry-CLI-Debug.spec  LogSentry-Web-Debug.spec  LogSentry-Web-Fixed.spec  QUICK_WINDOWS_FIX.md  README.md  SETUPTOOLS_FIX.md  SETUP_MIGRATION.md  TEMPLATE_FIX_SUMMARY.md  UPLOAD_CHECKLIST.md  WEB_INTERFACE.md  WINDOWS_CLI_TROUBLESHOOTING.md  build_executables.py  build_windows.bat  debug_cli_windows.bat  debug_executable.py  final_results.csv  install_logsentry.py  logsentry_cli.py  logsentry_cli.spec  logsentry_cli_debug.py  logsentry_web.py  logsentry_web.spec  logsentry_web_debug.py  pyproject.toml  quick_start.py  (+8 more)
logsentry/frontend/static/css/: style.css
logsentry/frontend/static/images/: .gitkeep  README.md
logsentry/frontend/static/js/: app.js
logsentry/frontend/templates/: 404.html  index.html
logsentry/logsentry/: __init__.py  analyzer.py  cli.py  parsers.py  rules.py  utils.py  web_app.py
logsentry/tests/: __init__.py  test_analyzer.py
